--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "playwright": "^1.55.0",
     "vue": "^3.5.16"
   },
   "devDependencies": {
